# QML_Sandbox

./: .gitignore
ImageEditor2/: CMakeLists.txt  main.cpp  qml.qrc  qtquickcontrols2.conf
ImageEditor2/qml/: main.qml  qml.qrc
ImageEditor2/src/: main.cpp
